Backport tree updates to be identical with 1.21.1